Alignment of submenu, relates to #67 Lines in first menu item, fixes #57

--- a/assets/sass/partials/_main.scss
+++ b/assets/sass/partials/_main.scss
@@ -834,18 +834,6 @@ textarea {
 		margin: {
 			left: 0px; // reset inline-block margin, space between items
 		}
-    a {
-      border: {
-        width: 0 1px 0 0;
-        style: solid;
-        color: $c_navMainBorder;
-      }
-    }
-    .sub-menu {
-      a {
-        border: 0;
-      }
-    }
   }
   a {
     display: block;
@@ -958,7 +946,10 @@ textarea {
       }
     }
     .sub-menu {
-      margin: -53px 0 0 199px;
+      margin: {
+        top: -54px;
+        left:203px;
+      }
     }
   }
   > .first {
